Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjObjectField.quorum
class Main
    Object v
    Text t
    action Main
        v:SetValue("text")
        Test(v)
    end

    action Test(Text var)
    end
end
